- Titulo más generico - Inclusión etiquetas meta description, keywords, author

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Generadores de jpromocion</title>
+  <title>Generadores aleatorios para pruebas</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="generador.ico">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <meta name="description" content="Generación de elementos comunes para relleno de datos de prueba: documentos identidad, perfiles completos, números, fechas, colores... Generaciones aleatorias, validaciones comunes.">
+  <meta name="keywords" content="generador, aleatorio, pruebas, datos, documentos, identidad, perfiles, números, fechas, colores, validaciones, generator, random, testing, tests, data, documents, identity, profiles, numbers, dates, colors, validations">
+  <meta name="author" content="Jose Javier Gálvez Gómez (jpromocion)">
 </head>
 <body class="mat-typography">
   <!-- necesario en angular material especificar estas clases para que coja los valores propios del tema oscuro-->
